@@ -1,4 +1,6 @@
 0.28 (in development):
+	+ Showing instagr.am links as an icons
+	* Big code refactoring
 
 0.27:
 	* Small fix
